test/visibility/private/functions/overloaded4.good
overloaded4.chpl:14: In function 'main':
overloaded4.chpl:15: error: cannot access 'aproc' as it is private to 'A'
